# TG_Bot

./: README.md
H10401/: picker.py  random_picker  random_picker.py  reminder.py  reminder_real.py
Syu/: main-07200554.py  main.py  main_latest.py
baixunceng26/: a_list=[1,2,3,4].py  import telebot.py  new2003  ooo.py  oooo.py  sc.py  tempCodeRunnerFile.py
bot/: list.py  main-07200554 copy.py  pyproject.toml  random_picker.py  reminder_real.py  test.json  vocab.py  課表.py
casper0714/: SITCON_camp.py  SITCON_list.py  food.py
demo/: 000.py  pyproject.toml  test
xuaaaaaaaaaaa/: 0720-2.py
